Add Thread To Fix Freeze Bug & Add Personal Project To DB